# TGAI_CHAT

./: .gitignore  README.md  init_project.ps1  pubspec.yaml  setup_env.ps1
.github/workflows/: build_apk.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  tgchat.cpp
android/app/src/main/kotlin/com/example/tg_chat/: MainActivity.kt  TgaiInference.kt  TgaiOnnxInference.kt  TgaiTokenizer.kt
lib/: app.dart  main.dart
lib/core/: adaptive.dart  config.dart  theme.dart
lib/data/: session_store.dart
lib/domain/models/: chat_message.dart  chat_session.dart  model_info.dart
lib/domain/providers/: chat_provider.dart  models_provider.dart  settings_provider.dart
lib/ffi/: llama_bindings.dart
lib/presentation/screens/: chat_screen.dart  file_browser_screen.dart  home_screen.dart  models_screen.dart  settings_screen.dart
lib/presentation/widgets/: chat_bubble.dart  debug_panel.dart  message_input.dart  parameter_panel.dart  session_tile.dart
lib/services/: llama_service.dart  pytorch_service.dart
